...
                }
            }
            
            Section("Active Medications") {
                if currentPatient.getCurrentMedications().isEmpty {
                    ContentUnavailableView {
                        Label("No Medications", systemImage: "pills.circle")
                    } description: {
                        Text("Add medications using the button at the top right")
                    }
                } else {
                    ForEach(currentPatient.getCurrentMedications(), id: \.name) { medication in
                        MedicationRowView(medication: medication)
...
            ToolbarItem(placement: .primaryAction) {
                Button {
                    showingAddMedication = true
                } label: {
                    Image(systemName: "pills.circle.fill").font(.system(size: 24))
                }
                .accessibilityIdentifier("addMedicationButton")
            }
//            ToolbarItem(placement: .navigationBarLeading) {
//                Button {
//                    dismiss()
//                } label : {
//                    HStack {
...
